--- a/app/globals.css
+++ b/app/globals.css
@@ -4,21 +4,21 @@
 
 
 :root {
-  --background: ;
-  --foreground: #000;
+  --background: #1f1f1f;
+  --foreground: #fff;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: ;
-    --foreground: #ededed;
+    --foreground: ;
   }
 }
 
 body {
   color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  background-color: var(--background);
+  font-family: Syne;
 }
 
 section {
@@ -26,9 +26,9 @@ section {
     color:;
 }
 
-h1, h2, h3, h4, h5 {font-family: ;}
+h1, h2, h3, h4, h5 {font-family: Syne;}
 p {
-    font-family: Mulish;
+    font-family: Syne;
     font-size: 22px;
 }
 
